# cedar-local-agent

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_and_test.yml  ci.yml  comment_pr.yml  generate_coverage.yml  semantic_version_check.yml
benches/: README.md  is_authorized.rs
benches/data/: 10.cedar  10.entities.json  100.cedar  100.entities.json  1000.cedar  1000.entities.json
benches/data_gen/: data_gen.rs  entities.rs  policy.rs  utils.rs
examples/logging/: Cargo.toml  README.md
examples/logging/src/: main.rs
examples/logging/tracing/src/: main.rs
examples/server/: Cargo.toml  README.md  request_allow.json  request_deny.json
examples/server/src/: authorization.rs  cedar_query.rs  handler.rs  main.rs
examples/simple/: main.rs
examples/simple_semver_check/: Cargo.toml  simple.cedar  simple.entities.json
examples/simple_semver_check/src/: main.rs
examples/tracing/: Cargo.toml  README.md
examples/tracing/application_log/: Cargo.toml
examples/tracing/application_log/src/: main.rs
examples/tracing/authorization_log/: Cargo.toml
examples/tracing/authorization_log/src/: main.rs
examples/tracing/authorization_log_config/: Cargo.toml
examples/tracing/authorization_log_config/src/: main.rs
scripts/: build_and_test.sh  generate-coverage.sh
src/: lib.rs  main.txt
src/public/: mod.rs  simple.rs
src/public/events/: core.rs  mod.rs  receive.rs
src/public/file/: content_validator.rs  entity_provider.rs  mod.rs  policy_set_provider.rs
src/public/log/: Authorization.puml  error.rs  event.rs  mod.rs  schema.rs
tests/: lib.rs
tests/data/: context_too_large.json  malformed_entities.json  malformed_policies.cedar  schema.cedarschema.json  schema_bad.cedarschema.json  static_and_templates.cedar  static_policies.cedar  sweets.cedar  sweets.entities.json  sweets.schema.cedar.json  sweets_input.entities.json  templates.cedar  too_many_entities.json
