[package]
name = "cedar-local-agent"
edition = "2021"
version = "1.0.0"
license = "Apache-2.0"
description = "Foundational library for creating Cedar-based asynchronous authorizers."
keywords = ["cedar", "agent", "authorization", "policy", "security"]
repository = "https://github.com/cedar-policy/cedar-local-agent"

[lib]
bench = false

[dependencies]
# Utilities
async-trait = "0.1.71"
chrono = "0.4.26"
derive_builder = "0.12.0"
futures = { version = "0.3.28", features = ["std"] }
fs2 = "0.4.3"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_repr = "0.1.16"
sha256 = "1.3.0"
tokio = { version = "1.0", features = ["full", "signal", "sync", "parking_lot"] }
uuid = { version = "1.4.1", features = ["v4"] }

# Error, Logging, Tracing
thiserror = "1.0.41"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-subscriber = "0.3.17"

# Cedar
cedar-policy = "3.0.0"
cedar-policy-core = "3.0.0"
cedar-policy-formatter = "3.0.0"
cedar-policy-validator = "3.0.0"

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13.0", features = ["flamegraph"] }

[[bin]]
name = "data_gen"
path = "benches/data_gen/data_gen.rs"
bench = false

[[bench]]
name = "is_authorized"
harness = false

[[example]]
name = "simple"
