[package]
name = "simple_semver_check"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Update the branch here when a new version is released
cedar-local-agent = { path="../.." }
# When creating a new release, update the branch here
cedar-policy = "3.1.0"
cedar-policy-core = "3.1.0"
tokio = "1.36.0"
