[package]
name = "ocsf-log-example"
edition = "2021"
version = "0.1.0"

publish = false

[dependencies]
cedar-local-agent = { version = "2.0",  path = "../../../" }

# Tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-subscriber = "0.3"

# Cedar
cedar-policy = "3.1"

# Tokio
tokio = "1"
